src/dot.output
Grammar

    0 $accept: startdot $end

    1 $@1: %empty

    2 startdot: utf thetype thename $@1 TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE
    3         | error
    4         | %empty

    5 utf: TOKEN_UTF8BOM
    6    | %empty

    7 thetype: TOKEN_STRICT TOKEN_GRAPH
    8        | TOKEN_GRAPH
    9        | TOKEN_STRICT TOKEN_DIGRAPH
   10        | TOKEN_DIGRAPH

   11 thename: text
   12        | %empty

   13 ctext: TOKEN_QTEXT
   14      | ctext TOKEN_PLUS TOKEN_QTEXT

   15 text: TOKEN_TEXT
   16     | TOKEN_NUM
   17     | TOKEN_HTEXT
   18     | ctext

   19 statements: statements statement
   20           | statement

   21 statement: statement2
   22          | statement2 TOKEN_SC
   23          | statement2 TOKEN_COMMA

   24 statement2: nstatement
   25           | estatement
   26           | astatement

   27 $@2: %empty

   28 statement2: sstatement $@2 oattrib

   29 $@3: %empty

   30 nstatement: nidid $@3 oattrib

   31 nidid: text
   32      | text TOKEN_COLON text
   33      | text TOKEN_COLON text TOKEN_COLON text

   34 nid: text
   35    | text TOKEN_COLON text
   36    | text TOKEN_COLON text TOKEN_COLON text

   37 sattr: text TOKEN_IS text

   38 sattr2: sattr
   39       | text

   40 iattr: sattr2 iattr
   41      | sattr2 TOKEN_COMMA iattr
   42      | sattr2 TOKEN_SC iattr
   43      | %empty

   44 tattr: TOKEN_BRACKETOPEN iattr TOKEN_BRACKETCLOSE

   45 oattrib: tattr oattrib
   46        | %empty

   47 $@4: %empty

   48 $@5: %empty

   49 estatement: nid $@4 erhs $@5 oattrib

   50 $@6: %empty

   51 $@7: %empty

   52 estatement: sstatement $@6 erhs $@7 oattrib

   53 erhs: TOKEN_EOP nid

   54 $@8: %empty

   55 erhs: TOKEN_EOP nid $@8 erhs
   56     | TOKEN_EOP sstatement

   57 $@9: %empty

   58 erhs: TOKEN_EOP sstatement $@9 erhs

   59 astatement: atype tattr
   60           | aset

   61 atype: TOKEN_GRAPH
   62      | TOKEN_NODE
   63      | TOKEN_EDGE

   64 aset: text TOKEN_IS text

   65 sstatement: shead TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

   66 $@10: %empty

   67 sstatement: TOKEN_BRACEOPEN $@10 statements TOKEN_BRACECLOSE

   68 shead: TOKEN_SUBGRAPH text
   69      | TOKEN_SUBGRAPH


Terminals, with rules where they appear

$end (0) 0
error (256) 3
TOKEN_BRACEOPEN (258) 2 65 67
TOKEN_BRACECLOSE (259) 2 65 67
TOKEN_PLUS (260) 14
TOKEN_COMMA (261) 23 41
TOKEN_COLON (262) 32 33 35 36
TOKEN_IS (263) 37 64
TOKEN_SC (264) 22 42
TOKEN_BRACKETOPEN (265) 44
TOKEN_BRACKETCLOSE (266) 44
TOKEN_UTF8BOM (267) 5
TOKEN_STRICT (268) 7 9
TOKEN_GRAPH (269) 7 8 61
TOKEN_SUBGRAPH (270) 68 69
TOKEN_DIGRAPH (271) 9 10
TOKEN_NODE (272) 62
TOKEN_EDGE (273) 63
TOKEN_TEXT <string> (274) 15
TOKEN_NUM <string> (275) 16
TOKEN_QTEXT <string> (276) 13 14
TOKEN_HTEXT <string> (277) 17
TOKEN_EOP <string> (278) 53 55 56 58


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
startdot (25)
    on left: 2 3 4, on right: 0
$@1 (26)
    on left: 1, on right: 2
utf (27)
    on left: 5 6, on right: 2
thetype <string> (28)
    on left: 7 8 9 10, on right: 2
thename <string> (29)
    on left: 11 12, on right: 2
ctext <string> (30)
    on left: 13 14, on right: 14 18
text <string> (31)
    on left: 15 16 17 18, on right: 11 31 32 33 34 35 36 37 39 64 68
statements (32)
    on left: 19 20, on right: 2 19 65 67
statement (33)
    on left: 21 22 23, on right: 19 20
statement2 (34)
    on left: 24 25 26 28, on right: 21 22 23
$@2 (35)
    on left: 27, on right: 28
nstatement (36)
    on left: 30, on right: 24
$@3 (37)
    on left: 29, on right: 30
nidid <string> (38)
    on left: 31 32 33, on right: 30
nid <dp> (39)
    on left: 34 35 36, on right: 49 53 55
sattr (40)
    on left: 37, on right: 38
sattr2 (41)
    on left: 38 39, on right: 40 41 42
iattr (42)
    on left: 40 41 42 43, on right: 40 41 42 44
tattr (43)
    on left: 44, on right: 45 59
oattrib (44)
    on left: 45 46, on right: 28 30 45 49 52
estatement (45)
    on left: 49 52, on right: 25
$@4 (46)
    on left: 47, on right: 49
$@5 (47)
    on left: 48, on right: 49
$@6 (48)
    on left: 50, on right: 52
$@7 (49)
    on left: 51, on right: 52
erhs (50)
    on left: 53 55 56 58, on right: 49 52 55 58
$@8 (51)
    on left: 54, on right: 55
$@9 (52)
    on left: 57, on right: 58
astatement (53)
    on left: 59 60, on right: 26
atype (54)
    on left: 61 62 63, on right: 59
aset (55)
    on left: 64, on right: 60
sstatement <dp> (56)
    on left: 65 67, on right: 28 52 56 58
$@10 (57)
    on left: 66, on right: 67
shead (58)
    on left: 68 69, on right: 65


State 0

    0 $accept: . startdot $end

    error          shift, and go to state 1
    TOKEN_UTF8BOM  shift, and go to state 2

    $end           reduce using rule 4 (startdot)
    TOKEN_STRICT   reduce using rule 6 (utf)
    TOKEN_GRAPH    reduce using rule 6 (utf)
    TOKEN_DIGRAPH  reduce using rule 6 (utf)

    startdot  go to state 3
    utf       go to state 4


State 1

    3 startdot: error .

    $default  reduce using rule 3 (startdot)


State 2

    5 utf: TOKEN_UTF8BOM .

    $default  reduce using rule 5 (utf)


State 3

    0 $accept: startdot . $end

    $end  shift, and go to state 5


State 4

    2 startdot: utf . thetype thename $@1 TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

    TOKEN_STRICT   shift, and go to state 6
    TOKEN_GRAPH    shift, and go to state 7
    TOKEN_DIGRAPH  shift, and go to state 8

    thetype  go to state 9


State 5

    0 $accept: startdot $end .

    $default  accept


State 6

    7 thetype: TOKEN_STRICT . TOKEN_GRAPH
    9        | TOKEN_STRICT . TOKEN_DIGRAPH

    TOKEN_GRAPH    shift, and go to state 10
    TOKEN_DIGRAPH  shift, and go to state 11


State 7

    8 thetype: TOKEN_GRAPH .

    $default  reduce using rule 8 (thetype)


State 8

   10 thetype: TOKEN_DIGRAPH .

    $default  reduce using rule 10 (thetype)


State 9

    2 startdot: utf thetype . thename $@1 TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    $default  reduce using rule 12 (thename)

    thename  go to state 16
    ctext    go to state 17
    text     go to state 18


State 10

    7 thetype: TOKEN_STRICT TOKEN_GRAPH .

    $default  reduce using rule 7 (thetype)


State 11

    9 thetype: TOKEN_STRICT TOKEN_DIGRAPH .

    $default  reduce using rule 9 (thetype)


State 12

   15 text: TOKEN_TEXT .

    $default  reduce using rule 15 (text)


State 13

   16 text: TOKEN_NUM .

    $default  reduce using rule 16 (text)


State 14

   13 ctext: TOKEN_QTEXT .

    $default  reduce using rule 13 (ctext)


State 15

   17 text: TOKEN_HTEXT .

    $default  reduce using rule 17 (text)


State 16

    2 startdot: utf thetype thename . $@1 TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

    $default  reduce using rule 1 ($@1)

    $@1  go to state 19


State 17

   14 ctext: ctext . TOKEN_PLUS TOKEN_QTEXT
   18 text: ctext .

    TOKEN_PLUS  shift, and go to state 20

    $default  reduce using rule 18 (text)


State 18

   11 thename: text .

    $default  reduce using rule 11 (thename)


State 19

    2 startdot: utf thetype thename $@1 . TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN  shift, and go to state 21


State 20

   14 ctext: ctext TOKEN_PLUS . TOKEN_QTEXT

    TOKEN_QTEXT  shift, and go to state 22


State 21

    2 startdot: utf thetype thename $@1 TOKEN_BRACEOPEN . statements TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN  shift, and go to state 23
    TOKEN_GRAPH      shift, and go to state 24
    TOKEN_SUBGRAPH   shift, and go to state 25
    TOKEN_NODE       shift, and go to state 26
    TOKEN_EDGE       shift, and go to state 27
    TOKEN_TEXT       shift, and go to state 12
    TOKEN_NUM        shift, and go to state 13
    TOKEN_QTEXT      shift, and go to state 14
    TOKEN_HTEXT      shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statements  go to state 29
    statement   go to state 30
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 22

   14 ctext: ctext TOKEN_PLUS TOKEN_QTEXT .

    $default  reduce using rule 14 (ctext)


State 23

   67 sstatement: TOKEN_BRACEOPEN . $@10 statements TOKEN_BRACECLOSE

    $default  reduce using rule 66 ($@10)

    $@10  go to state 41


State 24

   61 atype: TOKEN_GRAPH .

    $default  reduce using rule 61 (atype)


State 25

   68 shead: TOKEN_SUBGRAPH . text
   69      | TOKEN_SUBGRAPH .

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    $default  reduce using rule 69 (shead)

    ctext  go to state 17
    text   go to state 42


State 26

   62 atype: TOKEN_NODE .

    $default  reduce using rule 62 (atype)


State 27

   63 atype: TOKEN_EDGE .

    $default  reduce using rule 63 (atype)


State 28

   31 nidid: text .
   32      | text . TOKEN_COLON text
   33      | text . TOKEN_COLON text TOKEN_COLON text
   34 nid: text .
   35    | text . TOKEN_COLON text
   36    | text . TOKEN_COLON text TOKEN_COLON text
   64 aset: text . TOKEN_IS text

    TOKEN_COLON  shift, and go to state 43
    TOKEN_IS     shift, and go to state 44

    TOKEN_EOP  reduce using rule 34 (nid)
    $default   reduce using rule 31 (nidid)


State 29

    2 startdot: utf thetype thename $@1 TOKEN_BRACEOPEN statements . TOKEN_BRACECLOSE
   19 statements: statements . statement

    TOKEN_BRACEOPEN   shift, and go to state 23
    TOKEN_BRACECLOSE  shift, and go to state 45
    TOKEN_GRAPH       shift, and go to state 24
    TOKEN_SUBGRAPH    shift, and go to state 25
    TOKEN_NODE        shift, and go to state 26
    TOKEN_EDGE        shift, and go to state 27
    TOKEN_TEXT        shift, and go to state 12
    TOKEN_NUM         shift, and go to state 13
    TOKEN_QTEXT       shift, and go to state 14
    TOKEN_HTEXT       shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statement   go to state 46
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 30

   20 statements: statement .

    $default  reduce using rule 20 (statements)


State 31

   21 statement: statement2 .
   22          | statement2 . TOKEN_SC
   23          | statement2 . TOKEN_COMMA

    TOKEN_COMMA  shift, and go to state 47
    TOKEN_SC     shift, and go to state 48

    $default  reduce using rule 21 (statement)


State 32

   24 statement2: nstatement .

    $default  reduce using rule 24 (statement2)


State 33

   30 nstatement: nidid . $@3 oattrib

    $default  reduce using rule 29 ($@3)

    $@3  go to state 49


State 34

   49 estatement: nid . $@4 erhs $@5 oattrib

    $default  reduce using rule 47 ($@4)

    $@4  go to state 50


State 35

   25 statement2: estatement .

    $default  reduce using rule 25 (statement2)


State 36

   26 statement2: astatement .

    $default  reduce using rule 26 (statement2)


State 37

   59 astatement: atype . tattr

    TOKEN_BRACKETOPEN  shift, and go to state 51

    tattr  go to state 52


State 38

   60 astatement: aset .

    $default  reduce using rule 60 (astatement)


State 39

   28 statement2: sstatement . $@2 oattrib
   52 estatement: sstatement . $@6 erhs $@7 oattrib

    TOKEN_EOP  reduce using rule 50 ($@6)
    $default   reduce using rule 27 ($@2)

    $@2  go to state 53
    $@6  go to state 54


State 40

   65 sstatement: shead . TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN  shift, and go to state 55


State 41

   67 sstatement: TOKEN_BRACEOPEN $@10 . statements TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN  shift, and go to state 23
    TOKEN_GRAPH      shift, and go to state 24
    TOKEN_SUBGRAPH   shift, and go to state 25
    TOKEN_NODE       shift, and go to state 26
    TOKEN_EDGE       shift, and go to state 27
    TOKEN_TEXT       shift, and go to state 12
    TOKEN_NUM        shift, and go to state 13
    TOKEN_QTEXT      shift, and go to state 14
    TOKEN_HTEXT      shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statements  go to state 56
    statement   go to state 30
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 42

   68 shead: TOKEN_SUBGRAPH text .

    $default  reduce using rule 68 (shead)


State 43

   32 nidid: text TOKEN_COLON . text
   33      | text TOKEN_COLON . text TOKEN_COLON text
   35 nid: text TOKEN_COLON . text
   36    | text TOKEN_COLON . text TOKEN_COLON text

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    ctext  go to state 17
    text   go to state 57


State 44

   64 aset: text TOKEN_IS . text

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    ctext  go to state 17
    text   go to state 58


State 45

    2 startdot: utf thetype thename $@1 TOKEN_BRACEOPEN statements TOKEN_BRACECLOSE .

    $default  reduce using rule 2 (startdot)


State 46

   19 statements: statements statement .

    $default  reduce using rule 19 (statements)


State 47

   23 statement: statement2 TOKEN_COMMA .

    $default  reduce using rule 23 (statement)


State 48

   22 statement: statement2 TOKEN_SC .

    $default  reduce using rule 22 (statement)


State 49

   30 nstatement: nidid $@3 . oattrib

    TOKEN_BRACKETOPEN  shift, and go to state 51

    $default  reduce using rule 46 (oattrib)

    tattr    go to state 59
    oattrib  go to state 60


State 50

   49 estatement: nid $@4 . erhs $@5 oattrib

    TOKEN_EOP  shift, and go to state 61

    erhs  go to state 62


State 51

   44 tattr: TOKEN_BRACKETOPEN . iattr TOKEN_BRACKETCLOSE

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    $default  reduce using rule 43 (iattr)

    ctext   go to state 17
    text    go to state 63
    sattr   go to state 64
    sattr2  go to state 65
    iattr   go to state 66


State 52

   59 astatement: atype tattr .

    $default  reduce using rule 59 (astatement)


State 53

   28 statement2: sstatement $@2 . oattrib

    TOKEN_BRACKETOPEN  shift, and go to state 51

    $default  reduce using rule 46 (oattrib)

    tattr    go to state 59
    oattrib  go to state 67


State 54

   52 estatement: sstatement $@6 . erhs $@7 oattrib

    TOKEN_EOP  shift, and go to state 61

    erhs  go to state 68


State 55

   65 sstatement: shead TOKEN_BRACEOPEN . statements TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN  shift, and go to state 23
    TOKEN_GRAPH      shift, and go to state 24
    TOKEN_SUBGRAPH   shift, and go to state 25
    TOKEN_NODE       shift, and go to state 26
    TOKEN_EDGE       shift, and go to state 27
    TOKEN_TEXT       shift, and go to state 12
    TOKEN_NUM        shift, and go to state 13
    TOKEN_QTEXT      shift, and go to state 14
    TOKEN_HTEXT      shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statements  go to state 69
    statement   go to state 30
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 56

   19 statements: statements . statement
   67 sstatement: TOKEN_BRACEOPEN $@10 statements . TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN   shift, and go to state 23
    TOKEN_BRACECLOSE  shift, and go to state 70
    TOKEN_GRAPH       shift, and go to state 24
    TOKEN_SUBGRAPH    shift, and go to state 25
    TOKEN_NODE        shift, and go to state 26
    TOKEN_EDGE        shift, and go to state 27
    TOKEN_TEXT        shift, and go to state 12
    TOKEN_NUM         shift, and go to state 13
    TOKEN_QTEXT       shift, and go to state 14
    TOKEN_HTEXT       shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statement   go to state 46
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 57

   32 nidid: text TOKEN_COLON text .
   33      | text TOKEN_COLON text . TOKEN_COLON text
   35 nid: text TOKEN_COLON text .
   36    | text TOKEN_COLON text . TOKEN_COLON text

    TOKEN_COLON  shift, and go to state 71

    TOKEN_EOP  reduce using rule 35 (nid)
    $default   reduce using rule 32 (nidid)


State 58

   64 aset: text TOKEN_IS text .

    $default  reduce using rule 64 (aset)


State 59

   45 oattrib: tattr . oattrib

    TOKEN_BRACKETOPEN  shift, and go to state 51

    $default  reduce using rule 46 (oattrib)

    tattr    go to state 59
    oattrib  go to state 72


State 60

   30 nstatement: nidid $@3 oattrib .

    $default  reduce using rule 30 (nstatement)


State 61

   53 erhs: TOKEN_EOP . nid
   55     | TOKEN_EOP . nid $@8 erhs
   56     | TOKEN_EOP . sstatement
   58     | TOKEN_EOP . sstatement $@9 erhs

    TOKEN_BRACEOPEN  shift, and go to state 23
    TOKEN_SUBGRAPH   shift, and go to state 25
    TOKEN_TEXT       shift, and go to state 12
    TOKEN_NUM        shift, and go to state 13
    TOKEN_QTEXT      shift, and go to state 14
    TOKEN_HTEXT      shift, and go to state 15

    ctext       go to state 17
    text        go to state 73
    nid         go to state 74
    sstatement  go to state 75
    shead       go to state 40


State 62

   49 estatement: nid $@4 erhs . $@5 oattrib

    $default  reduce using rule 48 ($@5)

    $@5  go to state 76


State 63

   37 sattr: text . TOKEN_IS text
   39 sattr2: text .

    TOKEN_IS  shift, and go to state 77

    $default  reduce using rule 39 (sattr2)


State 64

   38 sattr2: sattr .

    $default  reduce using rule 38 (sattr2)


State 65

   40 iattr: sattr2 . iattr
   41      | sattr2 . TOKEN_COMMA iattr
   42      | sattr2 . TOKEN_SC iattr

    TOKEN_COMMA  shift, and go to state 78
    TOKEN_SC     shift, and go to state 79
    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    $default  reduce using rule 43 (iattr)

    ctext   go to state 17
    text    go to state 63
    sattr   go to state 64
    sattr2  go to state 65
    iattr   go to state 80


State 66

   44 tattr: TOKEN_BRACKETOPEN iattr . TOKEN_BRACKETCLOSE

    TOKEN_BRACKETCLOSE  shift, and go to state 81


State 67

   28 statement2: sstatement $@2 oattrib .

    $default  reduce using rule 28 (statement2)


State 68

   52 estatement: sstatement $@6 erhs . $@7 oattrib

    $default  reduce using rule 51 ($@7)

    $@7  go to state 82


State 69

   19 statements: statements . statement
   65 sstatement: shead TOKEN_BRACEOPEN statements . TOKEN_BRACECLOSE

    TOKEN_BRACEOPEN   shift, and go to state 23
    TOKEN_BRACECLOSE  shift, and go to state 83
    TOKEN_GRAPH       shift, and go to state 24
    TOKEN_SUBGRAPH    shift, and go to state 25
    TOKEN_NODE        shift, and go to state 26
    TOKEN_EDGE        shift, and go to state 27
    TOKEN_TEXT        shift, and go to state 12
    TOKEN_NUM         shift, and go to state 13
    TOKEN_QTEXT       shift, and go to state 14
    TOKEN_HTEXT       shift, and go to state 15

    ctext       go to state 17
    text        go to state 28
    statement   go to state 46
    statement2  go to state 31
    nstatement  go to state 32
    nidid       go to state 33
    nid         go to state 34
    estatement  go to state 35
    astatement  go to state 36
    atype       go to state 37
    aset        go to state 38
    sstatement  go to state 39
    shead       go to state 40


State 70

   67 sstatement: TOKEN_BRACEOPEN $@10 statements TOKEN_BRACECLOSE .

    $default  reduce using rule 67 (sstatement)


State 71

   33 nidid: text TOKEN_COLON text TOKEN_COLON . text
   36 nid: text TOKEN_COLON text TOKEN_COLON . text

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    ctext  go to state 17
    text   go to state 84


State 72

   45 oattrib: tattr oattrib .

    $default  reduce using rule 45 (oattrib)


State 73

   34 nid: text .
   35    | text . TOKEN_COLON text
   36    | text . TOKEN_COLON text TOKEN_COLON text

    TOKEN_COLON  shift, and go to state 85

    $default  reduce using rule 34 (nid)


State 74

   53 erhs: TOKEN_EOP nid .
   55     | TOKEN_EOP nid . $@8 erhs

    TOKEN_EOP  reduce using rule 54 ($@8)
    $default   reduce using rule 53 (erhs)

    $@8  go to state 86


State 75

   56 erhs: TOKEN_EOP sstatement .
   58     | TOKEN_EOP sstatement . $@9 erhs

    TOKEN_EOP  reduce using rule 57 ($@9)
    $default   reduce using rule 56 (erhs)

    $@9  go to state 87


State 76

   49 estatement: nid $@4 erhs $@5 . oattrib

    TOKEN_BRACKETOPEN  shift, and go to state 51

    $default  reduce using rule 46 (oattrib)

    tattr    go to state 59
    oattrib  go to state 88


State 77

   37 sattr: text TOKEN_IS . text

    TOKEN_TEXT   shift, and go to state 12
    TOKEN_NUM    shift, and go to state 13
    TOKEN_QTEXT  shift, and go to state 14
    TOKEN_HTEXT  shift, and go to state 15

    ctext  go to state 17
    text   go to state 89


State 78

   41 iattr: sattr2 TOKEN_COMMA . iattr
